# oceanpop

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  CREDITS.md  LICENSE  LICENSE.txt  Makefile.xbox  README.md  _config.yml
.github/workflows/: build.yml
_layouts/: default.html
assets/: CREDITS.md  CREDITS_PS2.md  CREDITS_PSP.md  CREDITS_Vita.md  CREDITS_Wii.md  CREDITS_footer.md  CREDITS_header.md  CREDITS_static.md
assets/languages/: nl.po
assets/levels/: level001.json  level002.json  level003.json  level004.json  level005.json  level006.json  level007.json  level008.json  level009.json  level010.json  level011.json  level012.json  level013.json  level014.json  level015.json  level016.json  level017.json  level018.json  level019.json  level020.json  level021.json  level022.json  level023.json  level024.json  level025.json  level026.json  level027.json  level028.json  level029.json  level031.json  level032.json  level033.json  level034.json  level035.json
doc/: DESIGN.md  gameloop.uml
doc/diagram/: gameloop.uml
docs/: index.md
platform/: add-new-platform.sh  add-translation.sh  update-platforms.sh  update-translation-files.sh
platform/unix/: io.github.sharkwouter.OceanPop.desktop  io.github.sharkwouter.OceanPop.metainfo.xml  io.github.sharkwouter.oceanpop.desktop  io.github.sharkwouter.oceanpop.metainfo.xml  metadata.xml  oceanpop.desktop
platform/wii/: make_release.sh  meta.xml
src/: Action.hpp  Board.cpp  Board.hpp  BoardManager.cpp  BoardManager.hpp  ButtonImage.hpp  Event.hpp  EventManager.cpp  EventManager.hpp  FontManager.cpp  FontManager.hpp  FontType.hpp  Gem.cpp  Gem.hpp  GemArray.hpp  MenuOption.hpp  OptionManager.cpp  OptionManager.hpp  PauseScreen.cpp  PauseScreen.hpp  Shell.hpp  Sound.hpp  SoundManager.cpp  SoundManager.hpp  StateManager.cpp  StateManager.hpp  TextureManager.cpp  TextureManager.hpp  Theme.hpp  ThemeManager.cpp  ThemeManager.hpp  TranslationManager.cpp  TranslationManager.hpp  Window.cpp  Window.hpp  colors.hpp  constants.hpp  main.cpp  utils.cpp  utils.hpp
src/states/: BaseState.hpp  CreditsState.cpp  CreditsState.hpp  GameOverState.cpp  GameOverState.hpp  GameState.cpp  GameState.hpp  GameStateChallenge.cpp  GameStateChallenge.hpp  GameStateRelaxed.cpp  GameStateRelaxed.hpp  HighscoreState.cpp  HighscoreState.hpp  HowToControlsState.cpp  HowToControlsState.hpp  HowToMatchState.cpp  HowToMatchState.hpp  HowToPlayState.cpp  HowToPlayState.hpp  HowToScoreState.cpp  HowToScoreState.hpp  HowToState.cpp  HowToState.hpp  MenuState.cpp  MenuState.hpp  Mode.hpp  ModeSelectState.cpp  ModeSelectState.hpp  NotImplementedState.cpp  NotImplementedState.hpp  OptionsState.cpp  OptionsState.hpp  State.hpp  WonState.cpp  WonState.hpp
